use common test class